# mcrouteur

./: Cargo.toml  README.md  docker-compose.yaml
benches/: trie_benches.rs
data/: lorem.txt  prefix-config.json
src/: codec.rs  connection.rs  lib.rs  memcached.rs  proxy.rs  router.rs  trie.rs
tests/: integration_test.rs  memcached_test.rs
