[package]
name = "mcrouteur"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28", features = ["full"] }
bytes = { version = "1.4" }
url = { version = "2.3", features = ["serde"] }
clap = { version = "4.2" }
crc = { version = "3.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
rand = { version = "0.8" }